@@ -22,8 +22,8 @@ buildFlags = filter (not . null)
 #else
 #warning Building without the webapp. You probably need to install Yesod..
 #endif
-#ifdef WITH_WEBAPP_HTTPS
-	, "Webapp-https"
+#ifdef WITH_WEBAPP_SECURE
+	, "Webapp-secure"
 #endif
 #ifdef WITH_PAIRING
 	, "Pairing"
